--- a/WorkoutTracker.Web/Views/Workout/AddExercise.cshtml
+++ b/WorkoutTracker.Web/Views/Workout/AddExercise.cshtml
@@ -12,7 +12,7 @@
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="AddExercise">
+        <form asp-action="AddExercise" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="WorkoutId" />
             <div class="form-group mb-3">
