--- a/WorkoutTracker.Web/Views/Home/Index.cshtml
+++ b/WorkoutTracker.Web/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
                     <i class="bi bi-graph-up exercise-icon mb-3" style="font-size: 3rem;"></i>
                     <h5 class="card-title">Track Progress</h5>
                     <p class="card-text">Monitor your fitness journey with detailed progress tracking and statistics.</p>
-                    <a href="#" class="btn btn-primary">
+                    <a asp-controller="Statistics" asp-action="Index" class="btn btn-primary">
                         <i class="bi bi-arrow-right"></i> View Statistics
                     </a>
                 </div>
